# MyAIGame

./: .env.example  .gitignore  FOR_SMLFLG.md  MultiKanalAgentErklärt.md  README.md  app.py  daemon.py  pyproject.toml  requirements.txt  worumgehts  worumgehts.txt  worumgeths.txt
claude-code/: CLAUDE.md  settings.json
claude-code/commands/: ClaudeChromeExtension.md  auto.md  batch.md  bigwin.md  check-state.md  checkpoint.md  chef-async.md  chef-lite.md  chef-subagent.md  chef.md  codex.md  crew.md  debug-loop.md  delegate.md  explore-first.md  focus.md  learn.md  quickwin.md  recap.md  research-oc.md  research-subagent.md  research-swarm.md  research.md  research.md.backup-20260209-223039  review.md  selfimprove.md  setup-git.md  snapshot.md  swarm.md  test-crew.md  test.md  validate-config.md  voice-smart.md
claude-code/companion/: ADHD_TEMPLATE.md  Skilluebersicht.md  WelcheFehlerVermeiden.md  WieArbeitestDuMitSamuel.md
claude-code/hooks/: codex_advisor.py  codex_session_review.py  hooks.json  (+7 more)
components/: __init__.py  shared.py
config/: audio_prompt.md  default.yaml
data/: __init__.py  claude_watcher.py  loader.py  models.py  opencode_poller.py  pricing.py
man/: multikanal.1
scripts/: install-piper.sh  install.sh  test-voice.sh
session-browser/: FOR_SMLFLG.md  app.py  run.sh  session_parser.py
systemd/: multikanal.service
tests/: test_cache.py  test_config.py  test_filter.py  test_narration.py
views/: __init__.py  sankey_costs.py  storyboard.py  timeline.py  warroom.py
voicemode-edge-tts/: README.md  server.py  voicemode-edge-tts.service
(+26 files in other folders)
