[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myaigame"
version = "0.1.0"
description = "MyAIGame multikanal TTS stack: dual-channel CLI (visual + audio)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "watchdog>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
multikanal = "multikanal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multikanal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
